# advent_of_code

./: .envrc  .gitignore  pyproject.toml
2016/day1/: day1.py
2016/day5/: password.py
2016/day7/: ipv7.py
2016/day9/: explosives.py
2016/tests/day2/: test_bathroom_security.py
2016/tests/day4/: test_rooms.py
2016/tests/day9/: test_explosives.py
2018/day01/: __main__.py  calculate_frequency.py  frequency.py  test_day01.py
2018/day02/: __init__.py  __main__.py  test_day02.py
2018/day03/: __init__.py  __main__.py  test_day03.py
2018/day04/: __main__.py  sleepy_guards.py  test_day04.py
2018/day05/: test_day05.py
2019/: 02-program-alarm.py  03-crossed-wires.py  04-secure-container.py  05-sunny-with-a-chance-of-asteroids.py  06-universal-orbit-map.py  07-amplification-circuit.py  08-space-image-format.py  09-sensor-boost.py  common.py  day01.py  intcode.py
day2/: bathroom_security.py
day3/: triangles.py
day4/: rooms.py
day5/: password.py
day6/: signal.py
day7/: ipv7.py
day8/: twofa.py
day9/: explosives.py
tests/: test_day1.py
tests/day2/: test_bathroom_security.py
tests/day4/: test_rooms.py
tests/day6/: test_signal.py
tests/day7/: test_ipv7.py
tests/day8/: test_2fa.py
tests/day9/: test_explosives.py
